NDW-Marketplace/ntm-metadata-registry/ntm-frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ntm-frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ntm-frontend
