NDW-Marketplace/ntm-metadata-registry/ntm-frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ntm-frontend
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - ntm-frontend.d37c3234d8454420babf.westeurope.aksapp.io
    secretName: ntm-frontend-askapp-tls
  rules:
  - host: ntm-frontend.d37c3234d8454420babf.westeurope.aksapp.io
    http:
      paths:
      - backend:
          service:
            name: ntm-frontend
            port:
              number: 80
        path: /
        pathType: Prefix
